# DevReady

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  verify-catalog.yml
.opencode/plans/: devready-improvements.md
devready/: __init__.py  __main__.py  cli.py  config.py  engine.py  utils.py
devready/ai/: __init__.py  client.py  guide.py  healer.py  readme_parser.py
devready/detectors/: __init__.py  base.py  dotnet.py  go.py  java.py  node.py  php.py  python.py  ruby.py  rust.py
devready/environment/: __init__.py  cleanup.py  env_vars.py  services.py  strategies.py  system_check.py  system_deps.py  version_manager.py
devready/web/: __init__.py  catalog.json  catalog.py  catalog_verified.json  github.py  jobs.py  security.py  server.py
devready/web/static/: index.html
scripts/: install.bat  install.sh  merge_verify_results.py  verify_catalog.py
tests/: __init__.py  test_cleanup.py  test_config.py  test_detectors.py  test_engine.py  test_engine_fix.py  test_env_vars.py  test_guide.py  test_healer.py  test_readme_parser.py  test_services.py  test_strategies.py  test_subprojects.py  test_system_check.py  test_system_deps.py  test_utils.py  test_version_manager.py  test_web.py
